gitops/infrastructure/harbor/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor
  namespace: harbor
spec:
  parentRefs:
    - name: main-gateway
      namespace: networking
  hostnames:
    - "harbor.talos-tart-ha.talos-on-macos.com"
  rules:
    - backendRefs:
        - name: harbor-portal
          port: 80
